@@ -91,41 +91,23 @@
                 <configuration>
                 </configuration>
             </plugin>
+
             <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.5.1</version>
                 <executions>
                     <execution>
-                        <id>default-cli</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
                         <configuration>
-                            <mainClass>com.example.embyapp/com.example.embyapp.Launcher</mainClass>
-                            <launcher>app</launcher>
-                            <jlinkZipName>app</jlinkZipName>
-                            <jlinkImageName>app</jlinkImageName>
-                            <noManPages>true</noManPages>
-                            <stripDebug>true</stripDebug>
-                            <noHeaderFiles>true</noHeaderFiles>
-
-                            <options>
-                                <option>--add-opens=emby.sdk.java/com.example.emby.modelEmby=com.google.gson</option>
-                                <option>--add-opens=emby.sdk.java/com.example.emby.EmbyClient=com.google.gson</option>
-                                <option>--add-opens=java.base/java.time=com.google.gson</option>
-                            </options>
-                            <addModules>
-                                <module>javafx.controls</module>
-                                <module>javafx.fxml</module>
-                                <module>javafx.graphics</module>
-                                <module>javafx.base</module>
-
-                                <module>emby.sdk.java</module>
-                                <module>com.google.gson</module>
-
-                                <module>java.prefs</module>
-                                <module>java.sql</module>
-                                <module>java.desktop</module>
-                                <module>okhttp</module>
-                            </addModules>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>com.example.embyapp.Launcher</mainClass>
+                                </transformer>
+                            </transformers>
                         </configuration>
                     </execution>
                 </executions>
